--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
+    <!-- EditText for Album Name Input -->
+    <EditText
+        android:id="@+id/editTextAlbumName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter Album Name"
+        android:inputType="text"/>
+
+    <!-- Button to Create Album -->
+    <Button
+        android:id="@+id/buttonCreateAlbum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Create Album"
+        android:layout_below="@id/editTextAlbumName"
+        android:layout_alignParentStart="true"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Button to Open Album -->
+    <Button
+        android:id="@+id/buttonOpenAlbum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Album"
+        android:layout_below="@id/editTextAlbumName"
+        android:layout_toEndOf="@id/buttonCreateAlbum"/>
+
+    <!-- Button to Delete Album -->
+    <Button
+        android:id="@+id/buttonDeleteAlbum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete Album"
+        android:layout_below="@id/buttonCreateAlbum"
+        android:layout_alignParentStart="true"/>
+
+    <!-- Button to Rename Album -->
+    <Button
+        android:id="@+id/buttonRenameAlbum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rename Album"
+        android:layout_below="@id/buttonOpenAlbum"
+        android:layout_toEndOf="@id/buttonDeleteAlbum"/>
+</RelativeLayout>
