--- a/app/src/main/res/layout/album_view.xml
+++ b/app/src/main/res/layout/album_view.xml
@@ -1,75 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <!-- Welcome Message -->
     <TextView
-        android:id="@+id/welcomeTextView"
-        android:layout_width="wrap_content"
+        android:id="@+id/albumTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome to the Album App"
-        android:textSize="24sp"
-        android:layout_gravity="center_horizontal"/>
+        android:text="Album Title"
+        android:textSize="18sp"/>
 
-    <!-- Button Layout -->
+    <GridView
+        android:id="@+id/photoGridView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/albumTitle"
+        android:numColumns="3"/>
+
+    <!-- Layout for buttons -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/photoGridView"
         android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:gravity="center">
 
-        <!-- Button to Create a New Album -->
         <Button
-            android:id="@+id/newButton"
+            android:id="@+id/add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create Album"/>
+            android:text="Add"/>
 
-        <!-- Button to Open an Album -->
         <Button
-            android:id="@+id/open"
+            android:id="@+id/copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Open Album"
-            android:visibility="invisible"/>
+            android:text="Copy"/>
 
-        <!-- Button to Delete an Album -->
+        <Button
+            android:id="@+id/paste"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Paste"/>
+
+        <Button
+            android:id="@+id/display"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Display"/>
+
         <Button
             android:id="@+id/delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete Album"
-            android:visibility="invisible"/>
+            android:text="Delete"/>
 
-        <!-- Button to Rename an Album -->
         <Button
-            android:id="@+id/rename"
+            android:id="@+id/move"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rename Album"
-            android:visibility="invisible"/>
-
-        <!-- Button to Search -->
-        <Button
-            android:id="@+id/search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Search"/>
+            android:text="Move"/>
     </LinearLayout>
-
-    <!-- GridView for Displaying Albums -->
-    <GridView
-        android:id="@+id/gridView1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:numColumns="2"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
-        android:padding="10dp"
-        android:gravity="center"/>
-</LinearLayout>
+</RelativeLayout>
