--- a/app/src/main/res/layout/edit_album.xml
+++ b/app/src/main/res/layout/edit_album.xml
@@ -1,75 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <!-- Welcome Message -->
-    <TextView
-        android:id="@+id/welcomeTextView"
+    <EditText
+        android:id="@+id/albumName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter Album Name"/>
+
+    <Button
+        android:id="@+id/create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to the Album App"
-        android:textSize="24sp"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_below="@id/albumName"
+        android:text="Save"/>
 
-    <!-- Button Layout -->
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/cancel"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="20dp">
-
-        <!-- Button to Create a New Album -->
-        <Button
-            android:id="@+id/newButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create Album"/>
-
-        <!-- Button to Open an Album -->
-        <Button
-            android:id="@+id/open"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Open Album"
-            android:visibility="invisible"/>
-
-        <!-- Button to Delete an Album -->
-        <Button
-            android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delete Album"
-            android:visibility="invisible"/>
-
-        <!-- Button to Rename an Album -->
-        <Button
-            android:id="@+id/rename"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rename Album"
-            android:visibility="invisible"/>
-
-        <!-- Button to Search -->
-        <Button
-            android:id="@+id/search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Search"/>
-    </LinearLayout>
-
-    <!-- GridView for Displaying Albums -->
-    <GridView
-        android:id="@+id/gridView1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:numColumns="2"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
-        android:padding="10dp"
-        android:gravity="center"/>
-</LinearLayout>
+        android:layout_below="@id/albumName"
+        android:layout_toRightOf="@id/create"
+        android:text="Cancel"/>
+</RelativeLayout>
