--- a/app/src/main/res/layout/activity_new_album.xml
+++ b/app/src/main/res/layout/activity_new_album.xml
@@ -4,41 +4,54 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp">
+    android:padding="16dp"
+    android:gravity="center"
+    android:background="@color/background_material_light">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="italic"
-        android:textSize="34sp"
-        android:layout_marginTop="15dp"
-        android:layout_gravity="center"
-        android:text="@string/create_new_album" />
-    <EditText
-        android:id="@+id/albumName"
+        android:text="@string/create_new_album"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="20dp"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/albumNameLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/new_album"
-        android:textColorHint="@color/colorPrimary"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:inputType="text"/>
+        android:layout_marginBottom="20dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/albumName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/new_album"
+            android:inputType="text"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_weight="1"
-        android:visibility="visible">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/create"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:text="@string/create" />
-        <Button
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/create"
+            android:layout_marginEnd="8dp"/>
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/cancel"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/cancel"
             android:textColor="@color/colorAccent"/>
     </LinearLayout>
